--- a/core/templates/core/finalizar_cita.html
+++ b/core/templates/core/finalizar_cita.html
@@ -6,7 +6,7 @@
     <div class="col-md-5">
         <div class="card shadow-lg border-success">
             <div class="card-header bg-success text-white text-center">
-                <h4 class="mb-0">💸 Finalizar y Cobrar</h4>
+                <h4 class="mb-0"> <i class="bi bi-credit-card-2-back text-light"></i>  Finalizar y Cobrar</h4>
             </div>
             
             <div class="card-body p-4">
@@ -38,7 +38,7 @@
 
                     <div class="d-grid gap-2">
                         <button type="submit" class="btn btn-success btn-lg">
-                            ✅ Confirmar Cobro
+                            <i class="bi bi-cash-stack"></i> Confirmar Cobro
                         </button>
                         <a href="{% url 'home' %}" class="btn btn-outline-secondary">
                             Cancelar
