--- a/core/templates/core/form_cliente.html
+++ b/core/templates/core/form_cliente.html
@@ -23,7 +23,7 @@
 
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-4">
                         <a href="{% url 'listado_clientes' %}" class="btn btn-secondary me-md-2">Cancelar</a>
-                        <button type="submit" class="btn btn-success">Guardar Cliente</button>
+                        <button type="submit" class="btn btn-success"> <i class="bi bi-floppy"></i> Guardar Cliente</button>
                     </div>
                 </form>
             </div>
