--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -3,14 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JK Beauty Salon</title>
+    <title>BeautyManager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            // "Transforma todos los inputs con la clase 'select2' en buscadores inteligentes"
+            $('.select2').select2({
+                width: '100%', // ajustar al ancho de Bootstrap
+                placeholder: "Seleccione una opción",
+                allowClear: true
+            });
+        });
+    </script>
 </head>
 <body class="bg-light">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">💇‍♀️ JK Beauty Manager</a>
+            <a class="navbar-brand fw-bold fst-italic" href="...">
+                <i class="bi bi-scissors"></i> BeautyManager
+            </a>
 
             {% if user.is_authenticated %}
                 <div class="navbar-nav me-auto">
@@ -19,7 +38,7 @@
                     <a class="nav-link" href="{% url 'lista_servicios' %}">Servicios</a>
                     <a class="nav-link" href="{% url 'listado_clientes' %}">Clientes</a>
                     <a class="nav-link" href="{% url 'listado_profesional' %}">Profesionales</a>
-                    <a class="nav-link" href="{% url 'reporte_caja' %}">💰 Caja</a>
+                    <a class="nav-link" href="{% url 'reporte_caja' %}"> <i class="bi bi-wallet2 text-info"></i> Caja</a>
                 </div>
 
                 <div class="navbar-nav ms-auto">
@@ -27,12 +46,31 @@
 
                     <form action="{% url 'logout' %}" method="post" class="d-inline">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-sm btn-outline-light">Cerrar Sesión</button>
+                        <button type="submit" class="btn btn-sm btn-outline-light">
+                            <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
+                        </button>
                     </form>
                 </div>
             {% endif %}
         </div>
     </nav>
+
+    <div class="container mt-3">
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show shadow-sm" role="alert">
+                    {% if message.tags == 'success' %} ✅
+                    {% elif message.tags == 'danger' %} 🛑
+                    {% elif message.tags == 'warning' %} ⚠️
+                    {% else %} ℹ️ {% endif %}
+
+                    <strong>{{ message }}</strong>
+
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+        {% endif %}
+    </div>
 
     <div class="container bg-white p-4 rounded shadow-sm">
         {% block content %}
@@ -42,6 +80,18 @@
     <footer class="text-center mt-4 text-muted">
         <small>Sistema desarrollado con Django & PostgreSQL</small>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var alerts = document.querySelectorAll('.alert');
+            alerts.forEach(function(alert) {
+                setTimeout(function() {
+                    var bsAlert = new bootstrap.Alert(alert);
+                    bsAlert.close();
+                }, 4000);
+            });
+        });
+    </script>
 
 </body>
 </html>
