--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1>📅 Agenda del Día <small class="text-muted fs-5">{{ fecha_actual }}</small></h1>
-    <a href="{% url 'agendar_cita' %}" class="btn btn-primary">+Agendar Nueva Cita</a>
+    <h1><i class="bi bi-calendar-date text-info"></i> Agenda del Día <small class="text-muted fs-5">{{ fecha_actual }}</small></h1>
+    <a href="{% url 'agendar_cita' %}" class="btn btn-primary"> <i class="bi bi-file-earmark-plus"></i>Agendar Cita</a>
 </div>
 
 <div class="card shadow-sm">
@@ -45,14 +45,14 @@
                         </td>
                         <td class="text-end">
                             {% if cita.estado == 'PENDIENTE' %}
-                                <a href="{% url 'confirmar_cita' cita.id %}" class="btn btn-lg btn-outline-primary" title="Confirmar Asistencia">
-                                    ✅
+                                <a href="{% url 'confirmar_cita' cita.id %}" class="btn btn-outline-primary" title="Confirmar Asistencia">
+                                   Confirmar <i class="bi bi-check2-circle"></i>
                                 </a>
                             {% endif %}
 
                             {% if cita.estado == 'PENDIENTE' or cita.estado == 'CONFIRMADO' %}
-                                <a href="{% url 'finalizar_cita' cita.id %}" class="btn btn-lg btn-success" title="Cobrar y Finalizar">
-                                    💰
+                                <a href="{% url 'finalizar_cita' cita.id %}" class="btn btn-outline-success" title="Cobrar y Finalizar">
+                                    Cobrar<i class="bi bi-cash-coin"></i>
                                 </a>
                             {% endif %}
 
