--- a/core/templates/core/lista_clientes.html
+++ b/core/templates/core/lista_clientes.html
@@ -2,10 +2,26 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2>👥 Directorio de Clientes</h2>
+    <h2> <i class="bi bi-people-fill text-dark"></i> Directorio de Clientes</h2>
     <a href="{% url 'crear_cliente' %}" class="btn btn-primary">
         + Nuevo Cliente
     </a>
+</div>
+<div class="row mb-4">
+    <div class="col-md-6">
+        <form method="get" class="d-flex gap-2">
+            <input type="text" name="q" class="form-control"
+                   placeholder="Buscar por nombre, apellido o RUC/C.I."
+                   value="{{ request.GET.q }}">
+                   <button type="submit" class="btn btn-outline-primary"><i class="bi bi-search"></i></button>
+
+            {% if request.GET.q %}
+                <a href="{% url 'listado_clientes' %}" class="btn btn-outline-secondary" title="Limpiar filtro">
+                    <i class="bi bi-backspace-reverse"></i>
+                </a>
+            {% endif %}
+        </form>
+    </div>
 </div>
 
 <div class="card shadow-sm">
@@ -27,14 +43,15 @@
                         <td>{{ cliente.ci_ruc }}</td>
                         <td>
                             <div class="btn-group">
-                                <a href="{% url 'detalle_cliente' cliente.id %}" class="btn btn-sm btn-info text-white">
-                                    📜 Historial
+                                <a href="{% url 'detalle_cliente' cliente.id %}" class="btn btn-sm btn-outline-info">
+                                    Historial <i class="bi bi-journal-text"></i>
                                 </a>
 
                                 <a href="{% url 'editar_cliente' cliente.id %}" class="btn btn-sm btn-outline-secondary">
-                                    ✏️
+                                    Editar <i class="bi bi-pencil-square"></i>
                                 </a>
-                                <a href="{% url 'eliminar_cliente' cliente.id %}" class="btn btn-sm btn-outline-danger">🗑️
+                                <a href="{% url 'eliminar_cliente' cliente.id %}" class="btn btn-sm btn-outline-danger">
+                                    Eliminar <i class="bi bi-trash bi-lg"></i>
                                 </a>
                             </div>
                         </td>
