--- a/core/templates/core/lista_profesional.html
+++ b/core/templates/core/lista_profesional.html
@@ -2,12 +2,27 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2>👥 Directorio de Profesionales</h2>
+    <h2> <i class="bi bi-people-fill text-dark"></i> Directorio de Profesionales</h2>
     <a href="{% url 'crear_profesional' %}" class="btn btn-primary">
         + Nuevo Profesional
     </a>
 </div>
+<div class="row mb-4">
+    <div class="col-md-6">
+        <form method="get" class="d-flex gap-2">
+            <input type="text" name="q" class="form-control"
+                   placeholder="Buscar por nombre, apellido o especialidad."
+                   value="{{ request.GET.q }}">
+                   <button type="submit" class="btn btn-outline-primary"> <i class="bi bi-search"></i></button>
 
+            {% if request.GET.q %}
+                <a href="{% url 'listado_profesional' %}" class="btn btn-outline-secondary" title="Limpiar filtro">
+                    <i class="bi bi-backspace-reverse"></i>
+                </a>
+            {% endif %}
+        </form>
+    </div>
+</div>
 <div class="card shadow-sm">
     <div class="card-body p-0">
         <table class="table table-hover align-middle mb-0"> <thead class="table-light">
@@ -40,8 +55,12 @@
                         <td>{{ profesional.telefono }}</td>
                         <td>
                             <div class="btn-group btn-group-sm">
-                                <a href="{% url 'editar_profesional' profesional.id %}" class="btn btn-outline-secondary">✏️</a>
-                                <a href="{% url 'eliminar_profesional' profesional.id %}" class="btn btn-outline-danger">🗑️</a>
+                                <a href="{% url 'editar_profesional' profesional.id %}" class="btn btn-outline-secondary">
+                                    Editar <i class="bi bi-pencil-square"></i>
+                                </a>
+                                <a href="{% url 'eliminar_profesional' profesional.id %}" class="btn btn-outline-danger">
+                                    Eliminar <i class="bi bi-trash bi-lg"></i>
+                                </a>
                             </div>
                         </td>
                     </tr>
