--- a/core/templates/core/lista_clientes.html
+++ b/core/templates/core/lista_clientes.html
@@ -4,7 +4,7 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2> <i class="bi bi-people-fill text-dark"></i> Directorio de Clientes</h2>
     <a href="{% url 'crear_cliente' %}" class="btn btn-primary">
-        + Nuevo Cliente
+       <i class="bi bi-person-add"></i> Nuevo Cliente
     </a>
 </div>
 <div class="row mb-4">
