--- a/core/templates/core/lista_profesional.html
+++ b/core/templates/core/lista_profesional.html
@@ -4,7 +4,7 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2> <i class="bi bi-people-fill text-dark"></i> Directorio de Profesionales</h2>
     <a href="{% url 'crear_profesional' %}" class="btn btn-primary">
-        + Nuevo Profesional
+        <i class="bi bi-person-add"></i> Nuevo Profesional
     </a>
 </div>
 <div class="row mb-4">
