--- a/core/templates/core/lista_servicios.html
+++ b/core/templates/core/lista_servicios.html
@@ -4,7 +4,7 @@
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>Catálogo de Servicios</h2>
         <a href="{% url 'crear_servicio' %}" class="btn btn-primary">
-            + Nuevo Servicio
+           <i class="bi bi-patch-plus"></i> Nuevo Servicio
         </a>
     </div>
         <div class="row mb-4">
