--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
         <div class="container">
-            <a class="navbar-brand fw-bold fst-italic" href="...">
+            <a class="navbar-brand fw-bold fst-italic" href="{% url 'home' %}">
                 <i class="bi bi-scissors"></i> BeautyManager
             </a>
 
