--- a/core/templates/core/reporte_caja.html
+++ b/core/templates/core/reporte_caja.html
@@ -110,7 +110,7 @@
 
 <div class="card shadow-sm border-danger">
     <div class="card-header bg-danger text-white">
-        <h5 class="mb-0"> <i class="bi bi-graph-up-arrow text-info"></i> Detalle de Gastos del Periodo</h5>
+        <h5 class="mb-0"> <i class="bi bi-graph-up-arrow"></i> Detalle de Gastos del Periodo</h5>
     </div>
     <div class="card-body p-0">
         <table class="table table-striped mb-0">
