--- a/core/templates/core/lista_citas.html
+++ b/core/templates/core/lista_citas.html
@@ -5,9 +5,11 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2><i class="bi bi-calendar-month text-info"></i> Gestión de Citas (Activas)</h2>
-    <a href="{% url 'agendar_cita' %}" class="btn btn-primary">
-       <i class="bi bi-file-earmark-plus"></i> Agendar Cita
-    </a>
+    {% if perms.core.add_cita %}
+        <a href="{% url 'agendar_cita' %}" class="btn btn-primary">
+           <i class="bi bi-file-earmark-plus"></i> Agendar Cita
+        </a>
+    {% endif %}
 </div>
 <div class="row mb-4">
     <div class="col-md-8">
@@ -74,10 +76,11 @@
                             <a href="{% url 'editar_cita' cita.id %}" class="btn btn-sm btn-outline-secondary" title="Reprogramar Cita">
                                 Reprogramar <i class="bi bi-arrow-clockwise"></i>
                             </a>
-                            
-                            <a href="{% url 'cancelar_cita' cita.id %}" class="btn btn-sm btn-outline-danger" title="Cancelar Cita">
-                                Cancelar <i class="bi bi-x-octagon"></i>
-                            </a>
+                            {% if perms.core.add_cita %}
+                                <a href="{% url 'cancelar_cita' cita.id %}" class="btn btn-sm btn-outline-danger" title="Cancelar Cita">
+                                    Cancelar <i class="bi bi-x-octagon"></i>
+                                </a>
+                            {% endif %}
                         </td>
                     </tr>
                 {% empty %}
