--- a/core/templates/core/lista_clientes.html
+++ b/core/templates/core/lista_clientes.html
@@ -46,13 +46,16 @@
                                 <a href="{% url 'detalle_cliente' cliente.id %}" class="btn btn-sm btn-outline-info">
                                     Historial <i class="bi bi-journal-text"></i>
                                 </a>
-
-                                <a href="{% url 'editar_cliente' cliente.id %}" class="btn btn-sm btn-outline-secondary">
-                                    Editar <i class="bi bi-pencil-square"></i>
-                                </a>
-                                <a href="{% url 'eliminar_cliente' cliente.id %}" class="btn btn-sm btn-outline-danger">
-                                    Eliminar <i class="bi bi-trash bi-lg"></i>
-                                </a>
+                                {% if perms.core.change_cliente %}
+                                    <a href="{% url 'editar_cliente' cliente.id %}" class="btn btn-sm btn-outline-secondary">
+                                        Editar <i class="bi bi-pencil-square"></i>
+                                    </a>
+                                {% endif %}
+                                {% if perms.core.delete_cliente %}
+                                    <a href="{% url 'eliminar_cliente' cliente.id %}" class="btn btn-sm btn-outline-danger">
+                                        Eliminar <i class="bi bi-trash bi-lg"></i>
+                                    </a>
+                                {% endif %}
                             </div>
                         </td>
                     </tr>
