--- a/core/templates/core/lista_profesional.html
+++ b/core/templates/core/lista_profesional.html
@@ -3,9 +3,11 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2> <i class="bi bi-people-fill text-dark"></i> Directorio de Profesionales</h2>
-    <a href="{% url 'crear_profesional' %}" class="btn btn-primary">
-        <i class="bi bi-person-add"></i> Nuevo Profesional
-    </a>
+    {% if perms.core.add_profesional %}
+        <a href="{% url 'crear_profesional' %}" class="btn btn-primary">
+            <i class="bi bi-person-add"></i> Nuevo Profesional
+        </a>
+    {% endif %}
 </div>
 <div class="row mb-4">
     <div class="col-md-6">
@@ -55,12 +57,16 @@
                         <td>{{ profesional.telefono }}</td>
                         <td>
                             <div class="btn-group btn-group-sm">
-                                <a href="{% url 'editar_profesional' profesional.id %}" class="btn btn-outline-secondary">
-                                    Editar <i class="bi bi-pencil-square"></i>
-                                </a>
-                                <a href="{% url 'eliminar_profesional' profesional.id %}" class="btn btn-outline-danger">
-                                    Eliminar <i class="bi bi-trash bi-lg"></i>
-                                </a>
+                                {% if perms.core.change_profesional %}
+                                    <a href="{% url 'editar_profesional' profesional.id %}" class="btn btn-outline-secondary">
+                                        Editar <i class="bi bi-pencil-square"></i>
+                                    </a>
+                                {% endif %}
+                                {% if perms.core.delete_profesional %}
+                                    <a href="{% url 'eliminar_profesional' profesional.id %}" class="btn btn-outline-danger">
+                                        Eliminar <i class="bi bi-trash bi-lg"></i>
+                                    </a>
+                                {% endif %}
                             </div>
                         </td>
                     </tr>
