--- a/core/templates/core/lista_servicios.html
+++ b/core/templates/core/lista_servicios.html
@@ -3,16 +3,21 @@
 {% block content %}
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>Catálogo de Servicios</h2>
-        <a href="{% url 'crear_servicio' %}" class="btn btn-primary">
-           <i class="bi bi-patch-plus"></i> Nuevo Servicio
-        </a>
+        {% if perms.core.add_servicio %}
+            <a href="{% url 'crear_servicio' %}" class="btn btn-primary">
+               <i class="bi bi-patch-plus"></i> Nuevo Servicio
+            </a>
+        {% endif %}
     </div>
         <div class="row mb-4">
         <div class="col-md-6">
             <form method="get" class="d-flex gap-2">
                 <input type="text" name="q" class="form-control"
                        placeholder="Buscar por nombre de servicio"
-                       value="{{ request.GET.q }}"> <button type="submit" class="btn btn-outline-primary">🔍</button>
+                       value="{{ request.GET.q }}">
+                    <button type="submit" class="btn btn-outline-primary">
+                        <i class="bi bi-search"></i>
+                    </button>
 
                 {% if request.GET.q %}
                     <a href="{% url 'lista_servicios' %}" class="btn btn-outline-secondary" title="Limpiar filtro">
@@ -46,12 +51,16 @@
                     </div>
 
                     <div class="col-md-3 text-end">
-                        <a href="{% url 'editar_servicio' servicio.id %}" class="btn btn-outline-secondary btn-sm">
-                            Editar <i class="bi bi-pencil-square bi-lg"></i>
-                        </a>
-                        <a href="{% url 'eliminar_servicio' servicio.id %}" class="btn btn-outline-danger btn-sm">
-                            Eliminar <i class="bi bi-trash bi-lg"></i>
-                        </a>
+                        {% if perms.core.change_servicio %}
+                            <a href="{% url 'editar_servicio' servicio.id %}" class="btn btn-outline-secondary btn-sm">
+                                Editar <i class="bi bi-pencil-square bi-lg"></i>
+                            </a>
+                        {% endif %}
+                        {% if perms.core.delete_servicio %}
+                            <a href="{% url 'eliminar_servicio' servicio.id %}" class="btn btn-outline-danger btn-sm">
+                                Eliminar <i class="bi bi-trash bi-lg"></i>
+                            </a>
+                        {% endif %}
                     </div>
 
                 </div>
