Preparando deploy: Gunicorn, Whitenoise y settings dinamicos

--- a/core/templates/core/form_servicio.html
+++ b/core/templates/core/form_servicio.html
@@ -22,7 +22,7 @@
                     {% endfor %}
 
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-4">
-                        <a href="{% url 'lista_servicios' %}" class="btn btn-secondary me-md-2">Cancelar</a>
+                        <a href="{% url url_cancelar %}" class="btn btn-secondary me-md-2">Cancelar</a>
                         <button type="submit" class="btn btn-success"> <i class="bi bi-floppy"></i> Guardar Servicio</button>
                     </div>
                 </form>
