--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1><i class="bi bi-calendar-date text-info"></i> Agenda del Día <small class="text-muted fs-5">{{ fecha_actual }}</small></h1>
+    <h1><i class="bi bi-calendar-date text-primary"></i> Agenda del Día <small class="text-muted fs-5">{{ fecha_actual }}</small></h1>
     {% if perms.core.add_cita %}
         <a href="{% url 'agendar_cita' %}" class="btn btn-primary"> <i class="bi bi-file-earmark-plus"></i> Agendar Cita</a>
     {% endif %}
