--- a/core/templates/core/liquidacion_comisiones.html
+++ b/core/templates/core/liquidacion_comisiones.html
@@ -70,7 +70,7 @@
 
     <div class="card shadow-sm">
         <div class="card-header">
-            <h5 class="mb-0"> <i class="bi bi-journal-check text-info"></i> Detalle de Servicios Realizados</h5>
+            <h5 class="mb-0"> <i class="bi bi-journal-check text-primary"></i> Detalle de Servicios Realizados</h5>
         </div>
         <div class="card-body p-0">
             <table class="table table-striped mb-0">
