--- a/core/templates/core/lista_citas.html
+++ b/core/templates/core/lista_citas.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2><i class="bi bi-calendar-month text-info"></i> Gestión de Citas (Activas)</h2>
+    <h2><i class="bi bi-calendar-month text-primary"></i> Gestión de Citas (Activas)</h2>
     {% if perms.core.add_cita %}
         <a href="{% url 'agendar_cita' %}" class="btn btn-primary">
            <i class="bi bi-file-earmark-plus"></i> Agendar Cita
