--- a/core/templates/core/lista_servicios.html
+++ b/core/templates/core/lista_servicios.html
@@ -15,7 +15,7 @@
                 <input type="text" name="q" class="form-control"
                        placeholder="Buscar por nombre de servicio"
                        value="{{ request.GET.q }}">
-                    <button type="submit" class="btn btn-outline-primary">
+                    <button type="submit" class="btn btn-primary">
                         <i class="bi bi-search"></i>
                     </button>
 
