--- a/core/templates/core/lista_gastos.html
+++ b/core/templates/core/lista_gastos.html
@@ -11,41 +11,43 @@
 
 <div class="card shadow-sm">
     <div class="card-body p-0">
-        <table class="table table-hover align-middle mb-0">
-            <thead class="table-light">
-                <tr>
-                    <th>Fecha</th>
-                    <th>Descripción</th>
-                    <th>Categoría</th>
-                    <th class="text-end">Monto</th>
-                    </tr>
-            </thead>
-            <tbody>
-                {% for gasto in gastos %}
+        <div class="table-responsive">
+            <table class="table table-hover align-middle mb-0">
+                <thead class="table-light">
                     <tr>
-                        <td class="fw-bold text-muted">{{ gasto.fecha|date:"d/m/Y" }}</td>
-                        <td>{{ gasto.descripcion }}</td>
-                        <td>
-                            <span class="badge bg-secondary text-light">
-                                {{ gasto.categoria.nombre }}
-                            </span>
-                        </td>
-                        <td class="text-end fw-bold text-danger">
-                            - {{ gasto.monto|intcomma }} Gs.
-                        </td>
-                    </tr>
-                {% empty %}
-                    <tr>
-                        <td colspan="4" class="text-center py-5">
-                            <h4 class="text-muted text-success">¡No hay gastos registrados!
-                                <i class="bi bi-check-circle-fill text-warning"></i>
-                            </h4>
-                            <p>Tu economía está impecable (por ahora).</p>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                        <th>Fecha</th>
+                        <th>Descripción</th>
+                        <th>Categoría</th>
+                        <th class="text-end">Monto</th>
+                        </tr>
+                </thead>
+                <tbody>
+                    {% for gasto in gastos %}
+                        <tr>
+                            <td class="fw-bold text-muted">{{ gasto.fecha|date:"d/m/Y" }}</td>
+                            <td>{{ gasto.descripcion }}</td>
+                            <td>
+                                <span class="badge bg-secondary text-light">
+                                    {{ gasto.categoria.nombre }}
+                                </span>
+                            </td>
+                            <td class="text-end fw-bold text-danger">
+                                - {{ gasto.monto|intcomma }} Gs.
+                            </td>
+                        </tr>
+                    {% empty %}
+                        <tr>
+                            <td colspan="4" class="text-center py-5">
+                                <h4 class="text-muted text-success">¡No hay gastos registrados!
+                                    <i class="bi bi-check-circle-fill text-warning"></i>
+                                </h4>
+                                <p>Tu economía está impecable (por ahora).</p>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 {% endblock %}
