Fix: Menu notebook a LG y espaciado en servicios

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -27,7 +27,7 @@
 </head>
 <body class="bg-light">
 
-    <nav class="navbar navbar-expand-xxl navbar-dark bg-dark mb-4">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand fw-bold fst-italic" href="{% url 'home' %}">
                 <i class="bi bi-scissors"></i> BeautyManager
