--- a/core/templates/core/lista_servicios.html
+++ b/core/templates/core/lista_servicios.html
@@ -43,25 +43,29 @@
                         </p>
                     </div>
 
-                    <div class="col-md-2 text-center">
-                        <small class="badge bg-light text-dark border">
-                            ⏱ {{ servicio.duracion_minutos }} min
-                        </small>
+                    <div class="d-flex justify-content-between align-items-center">
+                        </div>
+
+                    <div class="mt-2"> <span class="badge bg-light text-dark border">
+                            ⏱️ {{ servicio.duracion }} min
+                        </span>
                     </div>
 
-                    <div class="col-md-3 text-end">
-                        {% if perms.core.change_servicio %}
-                            <a href="{% url 'editar_servicio' servicio.id %}" class="btn btn-outline-secondary btn-sm">
-                                Editar <i class="bi bi-pencil-square bi-lg"></i>
-                            </a>
-                        {% endif %}
-                        {% if perms.core.delete_servicio %}
-                            <a href="{% url 'eliminar_servicio' servicio.id %}" class="btn btn-outline-danger btn-sm">
-                                Eliminar <i class="bi bi-trash bi-lg"></i>
-                            </a>
-                        {% endif %}
-                    </div>
+                    <div class="mt-3 d-flex gap-2 justify-content-end">
 
+                        <div class="col-md-3 text-end">
+                            {% if perms.core.change_servicio %}
+                                <a href="{% url 'editar_servicio' servicio.id %}" class="btn btn-outline-secondary btn-sm">
+                                    Editar <i class="bi bi-pencil-square bi-lg"></i>
+                                </a>
+                            {% endif %}
+                            {% if perms.core.delete_servicio %}
+                                <a href="{% url 'eliminar_servicio' servicio.id %}" class="btn btn-outline-danger btn-sm">
+                                    Eliminar <i class="bi bi-trash bi-lg"></i>
+                                </a>
+                            {% endif %}
+                        </div>
+                    </div>
                 </div>
             </div>
         {% empty %}
